[package]
edition = "2021"
name = "reimagined-tribble"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
hyper = {version = "0.14", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.20", features = ["full"]}
tower = "0.4"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.1", features = ["v4", "fast-rng"]}
